tried to fix the image in index, and aligned text away from the edge

--- a/css/stylization.css
+++ b/css/stylization.css
@@ -1,5 +1,5 @@
 body{
-		text-align: left;
+		text-align: center;
 		background-image: url(../images/b286a65bfc482ebc7b3138dbb6568b37.jpg);
 		background-size: 50%;
 		color: #000080;
@@ -37,6 +37,7 @@ li{
 }
 
 img {
-  width: 50%;
+  width: 10%;
+  height: 10%
   padding-bottom: 5%;
 }
